<resources>
    <string name="app_name">Meme Uploader</string>
    <string name="upload_image">Upload Image</string>
    <string name="choose_file">Choose File</string>
    <string name="enter_file_name">Enter file Name</string>
    <string name="view_uploads">View Uploads</string>

    <string name="nav_photo">Photos</string>
    <string name="nav_videos">Videos</string>
    <string name="nav_articles">Articles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_article">Upload Article</string>
</resources>
