<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleUploader">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_file" />

        <EditText
            android:id="@+id/ed_upload"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/btn_select"
            android:hint="@string/enter_file_name"
            android:importantForAutofill="no" />



        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="150dp"
            android:layout_marginBottom="20dp"
            android:text="@string/upload_article" />

        <TextView
            android:id="@+id/tv_viewUploads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_upload"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/btn_upload"
            android:text="@string/view_uploads"
            android:textSize="16sp" />
    </RelativeLayout>

</FrameLayout>